[tool.poetry]
name = "get-time-usage-irl"
version = "0.1.0"
description = ""
authors = ["MalvaTalpa <ciaosara15@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
json = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
